fixes #212 -- set explicit width on images for cropping

--- a/app/assets/stylesheets/builder/partials/images.scss
+++ b/app/assets/stylesheets/builder/partials/images.scss
@@ -68,6 +68,6 @@ section.images-container {
 
 section.cropper {
   img {
-    // width: 200px;
+    width: 800px;
   }
 }
